もっとチカチカさせてゲーミングオセロって感じにした

--- a/Othello.html
+++ b/Othello.html
@@ -7,6 +7,7 @@
         *{padding: 10; margin: 50;}
         canvas { background:#eee; display: block;margin: 0 auto;}
     </style>
+    <link rel="stylesheet" type="text/css" href="Othello.css">
 </head>
 <body>
     <div id="top">Your turn!</div>
