--- a/Othello.html
+++ b/Othello.html
@@ -13,7 +13,7 @@
     <div id="top">Your turn!</div>
     <canvas id="myCanvas" width="800" height="800"></canvas>
     <script src="Othello.js"></script>
-    <div id="bottom"> </div>
+    <input value="" type="text" name="textbox" id="bottom" size="50">
 
 </body>
 
